--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
+    "lodash": "^4.7.0",
+    "meteor-node-stubs": "~0.2.0",
+    "moment": "^2.12.0",
+    "nodep-date-input-polyfill": "^2.4.6"
   }
 }
