--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,11 @@
 {
+	"env": {
+		"MAIL_URL": "smtp://40701ebe2b9d2c3ec:18d0ca555fd201@mailtrap.io:2525/"
+	},
 	"galaxy.meteor.com": {
 		"env": {
 			"MONGO_URL": "mongodb://day-off-checker:GS4hU9ZEXe4juxEz@ds017070.mlab.com:17070/day-off-checker",
-			"ROOT_URL": "http://day-off-reporter.mcw-anesthesiology.tech",
+			"ROOT_URL": "http://www.dayoff.site/",
 			"MAIL_URL": "smtp://40701ebe2b9d2c3ec:18d0ca555fd201@mailtrap.io:2525/"
 		}
 	}
