--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "deploy": "DEPLOY_HOSTNAME=galaxy.meteor.com meteor deploy www.dayoff.site --settings settings.json"
   },
   "dependencies": {
+    "bootstrap-daterangepicker": "^2.1.19",
     "lodash": "^4.7.0",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.12.0",
-    "nodep-date-input-polyfill": "^2.4.6"
+    "moment-range": "^2.2.0",
+    "nodep-date-input-polyfill": "^2.4.6",
+    "twix": "^1.0.0"
   }
 }
