--- a/.mup/production/settings.json
+++ b/.mup/production/settings.json
@@ -6,7 +6,10 @@
 		"env": {
 			"MONGO_URL": "mongodb://day-off-checker:GS4hU9ZEXe4juxEz@ds017070.mlab.com:17070/day-off-checker",
 			"ROOT_URL": "http://www.dayoff.site/",
-			"MAIL_URL": "smtp://postmaster@mg.dayoff.site:8872262b107d6386544df64f197dfc20@smtp.mailgun.org:25/"
+			"MAIL_URL": "smtp://postmaster@mg.dayoff.site:8872262b107d6386544df64f197dfc20@smtp.mailgun.org:25/",
+			"ROLLBAR_SERVER_ACCESS_TOKEN": "78075ed24ab0423eb522767d97aaca22",
+			"ROLLBAR_CLIENT_ACCESS_TOKEN": "3e1208eaf43a4e9c86f74b95fab4d4f0",
+			"ROLLBAR_ENVIRONMENT": "production"
 		}
 	}
 }
