--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,18 @@
 {
 	"env": {
-		"MAIL_URL": "smtp://40701ebe2b9d2c3ec:18d0ca555fd201@mailtrap.io:2525/"
+		"MAIL_URL": "smtp://40701ebe2b9d2c3ec:18d0ca555fd201@mailtrap.io:2525/",
+		"ROLLBAR_SERVER_ACCESS_TOKEN": "78075ed24ab0423eb522767d97aaca22",
+		"ROLLBAR_CLIENT_ACCESS_TOKEN": "3e1208eaf43a4e9c86f74b95fab4d4f0",
+		"ROLLBAR_ENVIRONMENT": "production"
 	},
 	"galaxy.meteor.com": {
 		"env": {
 			"MONGO_URL": "mongodb://day-off-checker:GS4hU9ZEXe4juxEz@ds017070.mlab.com:17070/day-off-checker",
 			"ROOT_URL": "http://www.dayoff.site/",
-			"MAIL_URL": "smtp://postmaster@mg.dayoff.site:8872262b107d6386544df64f197dfc20@smtp.mailgun.org:25/"
+			"MAIL_URL": "smtp://postmaster@mg.dayoff.site:8872262b107d6386544df64f197dfc20@smtp.mailgun.org:25/",
+			"ROLLBAR_SERVER_ACCESS_TOKEN": "78075ed24ab0423eb522767d97aaca22",
+			"ROLLBAR_CLIENT_ACCESS_TOKEN": "3e1208eaf43a4e9c86f74b95fab4d4f0",
+			"ROLLBAR_ENVIRONMENT": "production"
 		}
 	}
 }
