--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "day-off-checker",
   "private": true,
   "scripts": {
-    "start": "MAIL_URL=smtp://40701ebe2b9d2c3ec:18d0ca555fd201@mailtrap.io:2525/ ROLLBAR_SERVER_ACCESS_TOKEN=78075ed24ab0423eb522767d97aaca22 ROLLBAR_CLIENT_ACCESS_TOKEN=3e1208eaf43a4e9c86f74b95fab4d4f0 ROLLBAR_ENVIRONMENT=development meteor run --settings settings.json",
+    "start": "MAIL_URL=smtp://40701ebe2b9d2c3ec:18d0ca555fd201@mailtrap.io:2525/ meteor run --settings settings.json",
     "deploy-galaxy": "DEPLOY_HOSTNAME=galaxy.meteor.com meteor deploy www.dayoff.site --settings settings.json",
     "mup-setup-testing": "cd .mup/testing/ && mup setup",
     "mup-setup-production": "cd .mup/production/ && mup setup",
