Fix mup for meteor 1.4, update nginx confs

--- a/.server-utils/certbot-dayoff.site.conf
+++ b/.server-utils/certbot-dayoff.site.conf
@@ -8,8 +8,8 @@ map $http_upgrade $connection_upgrade {
 
 # HTTP
 server {
-    listen 80 default_server; # if this is not a default server, remove "default_server"
-    listen [::]:80 default_server ipv6only=on;
+    listen 80; # if this is not a default server, remove "default_server"
+    listen [::]:80 ipv6only=on;
 
     server_name test.dayoff.site fellow.test.dayoff.site;
 
@@ -18,6 +18,19 @@ server {
     location / {
         root /usr/share/nginx/html;
     }
+}
+
+server {
+	listen 80 default_server; # if this is not a default server, remove "default_server"
+	listen [::]:80 default_server ipv6only=on;
+
+	server_name www.dayoff.site fellow.dayoff.site;
+
+	index index.html index.htm;
+
+	location / {
+		root /usr/share/nginx/html;
+	}
 }
 
 # HTTPS server
