--- a/.server-utils/dayoff.site.conf
+++ b/.server-utils/dayoff.site.conf
@@ -8,13 +8,27 @@ map $http_upgrade $connection_upgrade {
 
 # HTTP
 server {
+    listen 80; # if this is not a default server, remove "default_server"
+    listen [::]:80 ipv6only=on;
+
+    root /usr/share/nginx/html; # root is irrelevant
+    index index.html index.htm; # this is also irrelevant
+
+    server_name test.dayoff.site fellow.test.dayoff.site;
+
+    # redirect non-SSL to SSL
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTP
+server {
     listen 80 default_server; # if this is not a default server, remove "default_server"
     listen [::]:80 default_server ipv6only=on;
 
     root /usr/share/nginx/html; # root is irrelevant
     index index.html index.htm; # this is also irrelevant
 
-    server_name test.dayoff.site fellow.test.dayoff.site;
+    server_name www.dayoff.site fellow.dayoff.site;
 
     # redirect non-SSL to SSL
     return 301 https://$server_name$request_uri;
