--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "bcrypt": "^0.8.7",
     "bootstrap-daterangepicker": "^2.1.19",
     "email-validator": "^1.0.4",
-	"jquery": "<3.0.0",
+    "jquery": "<3.0.0",
     "lodash": "^4.7.0",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.12.0",
     "moment-range": "^2.2.0",
+    "nlp_compromise": "^6.5.0",
     "nodep-date-input-polyfill": "^4.0.6",
     "twix": "^1.0.0"
   },
