--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap-daterangepicker": "^2.1.19",
     "email-validator": "^1.0.4",
+    "fullcalendar": "^3.0.0",
     "jquery": "<3.0.0",
     "lodash": "^4.7.0",
     "meteor-node-stubs": "~0.2.0",
