--- a/.server-utils/dayoff.site.conf
+++ b/.server-utils/dayoff.site.conf
@@ -19,11 +19,11 @@ server {
 
 # HTTPS server
 server {
-	listen 443 ssl spdy; # TODO: http2
+	listen 443 ssl http2;
 	server_name test.dayoff.site fellow.test.dayoff.site; # this domain must match Common Name (CN) in the SSL certificate
 
-	ssl_certificate /etc/letsencrypt/live/test.dayoff.site/fullchain.pem; # full path to SSL certificate and CA certificate concatenated together
-	ssl_certificate_key /etc/letsencrypt/live/test.dayoff.site/privkey.pem; # full path to SSL key
+	ssl_certificate /etc/letsencrypt/live/www.dayoff.site/fullchain.pem; # full path to SSL certificate and CA certificate concatenated together
+	ssl_certificate_key /etc/letsencrypt/live/www.dayoff.site/privkey.pem; # full path to SSL key
 
 	# performance enhancement for SSL
 	ssl_stapling on;
@@ -60,7 +60,7 @@ server {
 
 # HTTPS server
 server {
-	listen 443 ssl spdy; # TODO: http2
+	listen 443 ssl http2;
 	server_name www.dayoff.site fellow.dayoff.site; # this domain must match Common Name (CN) in the SSL certificate
 
 	ssl_certificate /etc/letsencrypt/live/www.dayoff.site/fullchain.pem; # full path to SSL certificate and CA certificate concatenated together
