--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "mup-logs-production": "cd .mup/production/ && mup logs"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "bootstrap-daterangepicker": "^2.1.19",
     "email-validator": "^1.0.4",
     "fullcalendar": "^3.0.0",
-    "jquery": "<3.0.0",
     "lodash": "^4.7.0",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.12.0",
     "moment-range": "^2.2.0",
     "nodep-date-input-polyfill": "^4.0.6",
-	"react": "^15.3.2",
-	"react-dom": "^15.3.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "twix": "^1.0.0"
   },
   "devDependencies": {
