Change mup fork dep to full git+https url for yarn

--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "devDependencies": {
     "eslint": "^3.4.0",
-    "mup": "github:jacobmischka/meteor-up"
+    "mup": "git+https://github.com/jacobmischka/meteor-up"
   }
 }
