--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaVersion": 6,
 		"sourceType": "module",
@@ -8,6 +9,7 @@
 	},
 	"env": {
 		"meteor": true,
+		"es6": true,
 		"browser": true
 	},
 	"plugins": ["react"],
