--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
+    "flow-bin": "^0.61.0",
+    "flow-typed": "^2.2.3",
     "mup": "^1.2.0",
     "styled-jsx": "^2.2.1"
   }
