--- a/.server-utils/certbot-dayoff.site.conf
+++ b/.server-utils/certbot-dayoff.site.conf
@@ -10,7 +10,7 @@ server {
 	listen 80 default_server; # if this is not a default server, remove "default_server"
 	listen [::]:80 default_server ipv6only=on;
 
-	server_name www.dayoff.site fellow.dayoff.site test.dayoff.site fellow.test.dayoff.site;
+	server_name www.dayoff.site fellow.dayoff.site intern.dayoff.site test.dayoff.site fellow.test.dayoff.site intern.test.dayoff.site;
 
 	index index.html index.htm;
 
@@ -22,7 +22,7 @@ server {
 # HTTPS server
 server {
 	listen 443 ssl http2;
-	server_name test.dayoff.site fellow.test.dayoff.site; # this domain must match Common Name (CN) in the SSL certificate
+	server_name test.dayoff.site fellow.test.dayoff.site intern.test.dayoff.site; # this domain must match Common Name (CN) in the SSL certificate
 
 	ssl_certificate /etc/letsencrypt/live/www.dayoff.site/fullchain.pem; # full path to SSL certificate and CA certificate concatenated together
 	ssl_certificate_key /etc/letsencrypt/live/www.dayoff.site/privkey.pem; # full path to SSL key
@@ -63,7 +63,7 @@ server {
 # HTTPS server
 server {
 	listen 443 ssl http2;
-	server_name www.dayoff.site fellow.dayoff.site; # this domain must match Common Name (CN) in the SSL certificate
+	server_name www.dayoff.site fellow.dayoff.site intern.dayoff.site; # this domain must match Common Name (CN) in the SSL certificate
 
 	ssl_certificate /etc/letsencrypt/live/www.dayoff.site/fullchain.pem; # full path to SSL certificate and CA certificate concatenated together
 	ssl_certificate_key /etc/letsencrypt/live/www.dayoff.site/privkey.pem; # full path to SSL key
