--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "private": true,
   "scripts": {
     "start": "MAIL_URL=smtp://40701ebe2b9d2c3ec:18d0ca555fd201@mailtrap.io:2525/ meteor run --settings settings.json",
-    "deploy-galaxy": "DEPLOY_HOSTNAME=galaxy.meteor.com meteor deploy www.dayoff.site --settings settings.json",
-    "mup-setup-testing": "cd .mup/testing/ && mup setup",
-    "mup-setup-production": "cd .mup/production/ && mup setup",
-    "mup-deploy-testing": "cd .mup/testing/ && mup deploy",
-    "mup-deploy-production": "cd .mup/production/ && mup deploy",
-    "mup-logs-testing": "cd .mup/testing/ && mup logs",
-    "mup-logs-production": "cd .mup/production/ && mup logs"
+    "setup:testing": "cd .mup/testing/ && mup setup",
+    "setup:production": "cd .mup/production/ && mup setup",
+    "deploy:testing": "cd .mup/testing/ && mup deploy",
+    "deploy:production": "cd .mup/production/ && mup deploy",
+    "logs:testing": "cd .mup/testing/ && mup logs",
+    "logs:production": "cd .mup/production/ && mup logs"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
