--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-daterangepicker": "^2.1.19",
     "email-validator": "^1.0.4",
+    "flatpickr": "^4.3.2",
     "fullcalendar": "^3.0.0",
     "fuzzysearch": "^1.0.3",
     "lodash": "^4.7.0",
@@ -35,7 +36,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
-    "flow-bin": "^0.61.0",
+    "flow-bin": "^0.65.0",
     "flow-typed": "^2.2.3",
     "mup": "^1.2.0",
     "styled-jsx": "^2.2.1"
