--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-daterangepicker": "^2.1.19",
     "email-validator": "^1.0.4",
     "flatpickr": "^4.3.2",
+    "formdata-polyfill": "^3.0.9",
     "fullcalendar": "^3.0.0",
     "fuzzysearch": "^1.0.3",
     "lodash": "^4.7.0",
