--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "blob-polyfill": "^2.0.20171115",
     "bootstrap": "^3.3.7",
     "bootstrap-daterangepicker": "^2.1.19",
     "email-validator": "^1.0.4",
@@ -25,6 +26,7 @@
     "moment-range": "^3.1.0",
     "nodep-date-input-polyfill": "^5.2.0",
     "prop-types": "^15.6.0",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^16.2.0",
