--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "blob-polyfill": "^2.0.20171115",
     "bootstrap": "^3.3.7",
     "bootstrap-daterangepicker": "^2.1.19",
+    "classlist-polyfill": "^1.2.0",
     "email-validator": "^1.0.4",
     "flatpickr": "^4.3.2",
     "formdata-polyfill": "^3.0.9",
